--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.1",
     "@hookform/resolvers": "^2.8.2",
     "@mui/icons-material": "^5.0.3",
+    "@mui/lab": "^5.0.0-alpha.53",
     "@mui/material": "^5.0.3",
     "@mui/styles": "^5.0.1",
     "@reduxjs/toolkit": "^1.6.2",
