fix: home page ui

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 NODE_ENV=develop
-PUBLIC_URL_API=
-SOCKET_SERVER_URL=http://localhost:8000
+REACT_APP_PUBLIC_URL_API=
+REACT_APP_SOCKET_SERVER_URL=http://localhost:8000
 NODE_PATH=src/
