--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/draft-js": "^0.11.6",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -22,6 +23,7 @@
     "@types/react-router-dom": "^5.3.1",
     "@types/yup": "^0.29.13",
     "axios": "^0.22.0",
+    "draft-js": "^0.11.7",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
